--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,5 +6,7 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+@import '~bootstrap-select/sass/bootstrap-select';
+
 @import 'dashboard';
 @import 'datatable';
