--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,5 +8,6 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~bootstrap-select/sass/bootstrap-select';
 
-@import 'dashboard';
 @import 'datatable';
+@import 'rating';
+@import 'dashboard';
