--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -7,14 +7,14 @@ $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
 // Colors
-$blue: #00baff !default;
-$cyan: #00acc1 !default;
-$deep-purple: #432bc4 !default;
-$green: #43a047 !default;
-$indigo: #3949ab !default;
-$orange: #fb8c00 !default;
-$pink: #e91e63 !default;
-$purple: #8e24aa !default;
-$red: #e53935 !default;
-$teal: #00897b !default;
-$yellow: #fdd835 !default;
+$blue: #3490dc;
+$indigo: #6574cd;
+$purple: #9561e2;
+$pink: #f66d9b;
+$red: #e3342f;
+$orange: #f6993f;
+$yellow: #ffed4a;
+$green: #38c172;
+$teal: #4dc0b5;
+$cyan: #6cb2eb;
+$deep-purple: #432bc4;
