--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,5 +6,8 @@
 
 // Webpack example
 @import '~bootstrap';
+@import '~bootstrap-select/sass/bootstrap-select';
+
 @import '~bootstrap-vue';
-@import 'dashboard'
+@import 'dashboard';
+@import '~vue-search-select/dist/VueSearchSelect.css';
