--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13124,3 +13124,33 @@ body {
           flex: 1;
 }
 
+.project {
+  display: -webkit-box;
+  display: flex;
+}
+
+.project__nav {
+  -webkit-box-ordinal-group: 2;
+          order: 1;
+}
+
+@media screen and (max-width: 56.25em) {
+  .project__nav {
+    -webkit-box-ordinal-group: 3;
+            order: 2;
+  }
+}
+
+.project__btn {
+  -webkit-box-ordinal-group: 3;
+          order: 2;
+}
+
+@media screen and (max-width: 56.25em) {
+  .project__btn {
+    -webkit-box-ordinal-group: 2;
+            order: 1;
+    margin-bottom: 1rem;
+  }
+}
+
