--- a/resources/sass/_layout.scss
+++ b/resources/sass/_layout.scss
@@ -20,10 +20,13 @@
     }
 
     .search{
+        margin-top: .5rem;
         flex: 0 0 80%;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
+        position: relative;
     
         @media only screen and (max-width: $bp-extraSmall) {
             order: 1;
@@ -53,7 +56,7 @@
         }
     
         &__button {
-            background-color: var(--color-grey-light-2);
+            background-color: transparent;
             border: none; 
     
             &:focus {
@@ -69,6 +72,28 @@
             height: 2rem;
             width: 2rem;
             fill: var(--color-grey-dark-3);
+        }
+        &__result{
+            width: 80%;
+            z-index: 100;
+            position: absolute;
+            top: 3rem;
+            left: 9rem;
+            max-height: 290px;
+            overflow-y: auto;
+
+                
+            @media only screen and (max-width: $bp-medium) {
+                left: 6rem;
+            }
+                
+            @media only screen and (max-width: $bp-small) {
+                left: 5rem;
+            }
+
+            @media only screen and (max-width: $bp-extraSmall) {
+                left: 4.5rem;
+            }
         }
     }
 }
